Fix JobSummary params wrapping bug

--- a/src/components/JobSummary/JobSummary.module.scss
+++ b/src/components/JobSummary/JobSummary.module.scss
@@ -31,6 +31,7 @@
 .params {
   margin: 12px 0;
   color: $color-dark;
+  white-space: nowrap;
 }
 
 .bullet {
